[package]
name = "jrn"
version = "0.1.0"
authors = ["Tom Lewis <TomxLewis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.*"
lazy_static = "1.4.*"
chrono = "0.4.*"
serde = { version = "1.0", features = ["derive"] }
dirs = "2.0.*"
ron = "*"
regex = "1"
log = "0.4.8"
simplelog = "0.7.3"
assert_cmd = "0.11"
structopt = "0.3"
